--- a/KamleonApp/app/src/main/res/values/colors.xml
+++ b/KamleonApp/app/src/main/res/values/colors.xml
@@ -90,7 +90,7 @@
     <color name="gradient_5">#00CDD4</color>-->
     <color name="gradient_1">#FC664E</color>
     <color name="gradient_2">#ED9005</color>
-    <color name="gradient_3">#EBD952</color>
+    <color name="gradient_3">#FFD952</color>
     <color name="gradient_4">#95D790</color>
     <color name="gradient_5">#30D5CB</color>
     <color name="premium_gradient_1">#FFFFFF</color>
